k8s/infra-base/monitoring/open-telemetry/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: otel-gateway-grpc
  namespace: opentelemetry
spec:
  entryPoints:
    - otel-grpc
  routes:
  - match: HostSNI(`*`)
    services:
    - name: collector-gateway-collector
      port: 4317
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: otel-gateway-http
  namespace: opentelemetry
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`otel-gateway-http.chenwx.top`)
      kind: Rule
      services:
        - name: collector-gateway-collector
          namespace: opentelemetry
          port: 4318
